--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
-    "next": "16.1.3",
+    "next": "^16.1.4",
     "next-themes": "^0.4.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "postcss": "^8.5.6",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
     "resend": "^6.8.0",
     "tailwind-merge": "^3.4.0",
@@ -26,13 +27,13 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^25.0.9",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.3",
-    "tailwindcss": "^4",
+    "eslint-config-next": "^16.1.4",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
